--- a/about.html
+++ b/about.html
@@ -104,6 +104,14 @@
 											<div class="progress__bar" data-progress-percent="85" data-timing="ease" data-duration="1000" data-delay="500"></div><span class="progress__number">47%</span>
 										</div>
 									</div><!-- End / progress -->
+
+									<!-- progress -->
+									<div class="progress">
+										<h5 class="progress__title">ReactJs</h5>
+										<div class="progress__wrap">
+											<div class="progress__bar" data-progress-percent="85" data-timing="ease" data-duration="1000" data-delay="500"></div><span class="progress__number">47%</span>
+										</div>
+									</div><!-- End / progress -->
 									
 									
 									<!-- progress -->
